feat: operações de usuário no encurtador
